# SoftRobotSUPlugin

./: CMakeLists.txt  README.md  SoftRobotSU.md  SoftRobotSUConfig.cmake.in  SoftRobotSUTest.scn  SoftRobotsSU.md  SoftRobotsSUConfig.cmake.in  SoftRobotsSUTest.html  SoftRobotsSUTest.scn
SoftRobotSU_test/: CMakeLists.txt
SoftRobotsSU_test/: CMakeLists.txt
src/SoftRobotSU/: config.h.in  initSoftRobotSU.cpp
src/SoftRobotSU/mapping/: BeamProjectionDifferenceMultiMapping.cpp  BeamProjectionDifferenceMultiMapping.h  BeamProjectionDifferenceMultiMapping.inl  RotationAndBarycentricMapping.cpp  RotationAndBarycentricMapping.h  RotationAndBarycentricMapping.inl
src/SoftRobotsSU/: config.h.in  initSoftRobotsSU.cpp
src/SoftRobotsSU/mapping/: RotationAndBarycentricMapping.cpp  RotationAndBarycentricMapping.h  RotationAndBarycentricMapping.inl
